--- a/src/index.css
+++ b/src/index.css
@@ -98,7 +98,7 @@ a {
   }
 
   .flex.space-x-8 {
-    gap: 1rem;
+    gap: 0.5rem;
   }
 
   .text-4xl {
@@ -325,7 +325,7 @@ a {
 
 
   .text-5xl.font-semibold {
-    font-size: 1.25rem;
+    font-size: 1.2rem;
   }
 
   .w-24.h-12 {
@@ -354,7 +354,7 @@ a {
 
   /* Footer Section */
   .min-h-screen {
-    min-height: 75vh;
+    min-height: 100vh;
 
   }
 
@@ -363,14 +363,17 @@ a {
     flex-direction: column;
   }
 
- 
+ .foot{
+  display: flex !important;
+  flex-direction: row !important;
+ }
   
   .text-4xl {
     font-size: 1.25rem;
     margin-bottom: 0.5rem;
   }
   footer{
-    margin-top: 20px;
+    margin-top: 70px;
   }
 
   .text-lg {
@@ -379,9 +382,16 @@ a {
   }
   .footers {
 
-    margin-bottom: 221px;
+    margin-bottom: 162px;
   
 }
+
+    .icons {
+        align-items: center !important;
+        display: flex !important;
+        flex-direction: row !important;
+        gap: 3rem;
+    }
 
   .bg-white.text-black.px-6.py-3 {
     padding: 0.4rem 0.8rem;
